# caladon

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  GOVERNANCE.md  MAINTAINERS.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/workflows/: ci.yml
apple/: Package.resolved  Package.swift
apple/Sources/CaladonCoreFFI/: caladon_core.swift
apple/Sources/CaladonCoreShim/: shim.c
apple/Sources/CaladonCoreShim/include/: caladon_coreFFI.h  module.modulemap
apple/Sources/SwiftyKit/: Attestation.swift  Crypto.swift  DcapVerifier.swift  GatewayClient.swift  Networking.swift  Padding.swift  SeedAuth.swift  SeedCodec.swift  SeedIdentity.swift  SeedStore.swift  Session.swift
apple/SwiftyApp/: README-testflight.md  project.yml  testflight.sh
apple/SwiftyApp/Sources/: ChatView.swift  HomeView.swift  OnboardingView.swift  RootView.swift  SwiftyApp.swift
apple/SwiftyApp/fastlane/: Appfile  Fastfile
apple/Tests/SwiftyKitTests/: AttestationTests.swift  CryptoTests.swift  DcapVerifierTests.swift  GatewayClientTests.swift  GatewaySessionTests.swift  NetworkingTests.swift  PaddingTests.swift  QuoteFixture.swift  SeedAuthTests.swift  SeedCodecTests.swift  SeedIdentityTests.swift  SeedStoreTests.swift  SessionTests.swift
apple/scripts/: README.md  build-caladon-core-xcframework.sh
apple/scripts/native-binding/: CaladonCoreFFITests.swift
apple/scripts/uniffi-bindgen/: .gitignore  Cargo.toml  main.rs
caladon-core/: .gitignore  Cargo.toml  build.rs
caladon-core/examples/: fetch_fixture.rs
caladon-core/src/: caladon_core.udl  envelope.rs  ffi.rs  kdf.rs  lib.rs  padding.rs  passkey.rs  ratchet.rs  seed_auth.rs  seed_codec.rs  session.rs
caladon-core/src/attestation/: collateral.rs  mod.rs  verdict.rs
caladon-core/src/wasm/: bindings.rs  mod.rs
caladon-core/tests/: attestation.rs  bindings.rs  generate_vectors.py  vectors.json  vectors.rs
caladon-core/tests/fixtures/: collateral.json
contracts/: attestation-evidence.md  attestation.md  gateway-api.md  identity-envelope.md  inference-providers.md
docs/: cost-model.md  deployment-tiers.md  oss-reuse-map.md  private-ai-architecture-decision.md
docs/security/: claims-register.md  measurements.md  non-targetability.md  plaintext-exposure-map.md  reproducible-builds.md  threat-model.md
gateway/: Dockerfile  README.md  pyproject.toml
gateway/app/: accounts.py  attestation.py  auth.py  config.py  deps.py  envelope.py  ids.py  inference_backend.py  letta_client.py  main.py  mcp_broker.py  models_catalog.py  schemas.py  seed_auth.py  session.py  sse.py  transcript.py
gateway/app/routes/: attestation.py  chat.py  health.py  messages.py  models.py  session.py  tenants.py
gateway/tests/: conftest.py  test_accounts.py  test_attestation_route.py  test_auth.py  test_chat.py  test_dstack_fetch.py  test_envelope.py  test_health.py  test_inference_receipt.py  test_inference_tools.py  test_letta_stream.py  test_mcp_broker.py  test_messages.py  test_models_catalog.py  test_seed_auth.py  test_session.py  test_session_route.py  test_sse.py  test_tenants.py  test_transcript_store.py
infra/: .env.example  README.md  docker-compose.yml
infra/compose/: t0-plain.yml
infra/cvm/: docker-compose.yml  dstack-compose.caladon-app.yml  dstack-compose.caladon-web.yml  dstack-compose.gateway-only.yml  dstack-compose.gw-v1.yml  dstack-compose.gw-v2.yml  dstack-compose.yml  gate1-smoke.sh  gate1.sh  gate1_client.py  gwv2_pin.json  publish-gateway.sh
infra/postgres-init/: 01-enable-vector.sql
infra/receipt/: README.md  collect-app-ids.py  observed-app-ids.json
infra/reproducible/: .gitignore  README.md  build-caladon-core-wasm.sh  build-gateway-image.sh
infra/scripts/: 00-preflight.sh  10-install-docker.sh  20-install-tailscale.sh  30-harden.sh  40-install-ollama.sh  45-llama-server.sh  50-pull-model.sh  52-register-provider.sh  55-create-agent.sh  70-verify-bindings.sh  80-tailscale-serve.sh  81-gateway-smoke.sh
infra/transparency/: .gitignore  README.md  build-record.py  docker-compose.yml  gen-measurements.py  measurements.source.json  publish.sh  rekor_api.py  verify.sh
infra/transparency/sample/: rekor-entry.sample.json
swifty_crypto/: __init__.py  envelope.py  kdf.py  padding.py  ratchet.py  session.py
swifty_inference/: __init__.py  client.py  models.py  policy.py
tests/: README.md
tests/attestation/: test_fail_closed_contract.py
tests/crypto/: test_identity_envelope_contract.py  test_kdf_extra.py  test_padding.py  test_session.py
tests/inference/: test_client.py  test_policy.py
tests/infra/: test_compose.py
tests/leak/: test_claims_lint.py  test_no_plaintext_logging.py
tests/transparency/: test_measurements_generated.py
web-client/: .dockerignore  Dockerfile  README.md  SURGERY.md  apply-overlay.sh  setup.sh
web-client/caladon/: .gitignore  README.md  build-wasm.sh  package-lock.json  package.json  tsconfig.json  vitest.config.ts
web-client/caladon/src/: bytes.ts  client.ts  collateral.ts  constants.ts  envelope.ts  index.ts  passkey.ts  quote.ts  types.ts  wasm.ts
web-client/caladon/test/: capture-pin.ts  intel_quote.hex  live.test.ts  offline.test.ts  support.ts
web-client/caladon/wasm/: caladon_core.d.ts  caladon_core.js  caladon_core_bg.wasm.d.ts  package.json
web-client/overlay/: fetch-rag-model.sh
web-client/overlay/client/: tsconfig.json  vite.config.ts
web-client/overlay/client/src/: vite-env.d.ts
web-client/overlay/client/src/common/: types.ts
web-client/overlay/client/src/components/Artifacts/: ArtifactPreview.tsx  ArtifactTabs.tsx
web-client/overlay/client/src/hooks/: AuthContext.tsx  useResourcePermissions.ts
web-client/overlay/client/src/routes/: index.tsx
web-client/overlay/client/src/store/: useConversationList.ts  useForkConversation.ts  useHydrateConversation.ts  useImportConversation.ts  useRag.ts
web-client/overlay/client/src/utils/: artifacts.ts
web-client/shim/: README.md  package-lock.json  package.json  tsconfig.json
web-client/shim/src/: config.ts  proxy.ts  server.ts  smoke.ts
(+33 files in other folders)
