[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "caladon-gateway"
license = "Apache-2.0"
version = "0.1.0"
description = "Swifty gateway — client-facing API in front of Letta"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic-settings>=2.5",
    "cryptography>=43",
    "pynacl>=1.5",   # XChaCha20-Poly1305 (cvm-mode WMK open, §6) — not in `cryptography`
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.6"]

[tool.setuptools]
packages = ["app", "app.routes"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
